--- a/trailrunner/wwwroot/app/runners.html
+++ b/trailrunner/wwwroot/app/runners.html
@@ -17,7 +17,7 @@
                     <th>Favorite Beverage</th>
                 </tr>
             </thead>
-            <tbody ng-repeat="runner in runners">
+            <tbody ng-repeat="runner in vm.runners">
                 <tr>
                     <th scope="row">{{runner.id}}</th>
                     <td>{{runner.first}}</td>
