--- a/trailrunner/wwwroot/app/home.html
+++ b/trailrunner/wwwroot/app/home.html
@@ -24,7 +24,7 @@
             <div class="col-md-4">
                 <h2>People</h2>
                 <p>A list of our great runners</p>
-                <p><button class="btn btn-default">more »</button></p>
+                <p><a class="btn btn-default" href="/runners">more »</a></p>
 
             </div>
         </div>
