--- a/trailrunner/wwwroot/app/runners.html
+++ b/trailrunner/wwwroot/app/runners.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="RunnersController as runners">
+<div class="container">
     <div class="page-header"><h1>Runners</h1></div>
     <div class="panel panel-default">
         <!-- Default panel contents -->
